add secrets to yml file

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -25,5 +25,7 @@ test:
 production:
   omniauth_provider_key: <%= ENV["OMNIAUTH_PROVIDER_KEY"] %>
   omniauth_provider_secret: <%= ENV["OMNIAUTH_PROVIDER_SECRET"] %>
+  heroku_oauth_id:             <%= ENV["HEROKU_OAUTH_ID"] %>
+  heroku_oauth_secret:          <%= ENV["HEROKU_OAUTH_SECRET"] %>
   # domain_name: <%= ENV["DOMAIN_NAME"] %>
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
