add secrets to yml file

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -25,5 +25,8 @@ test:
 production:
   omniauth_provider_key: <%= ENV["OMNIAUTH_PROVIDER_KEY"] %>
   omniauth_provider_secret: <%= ENV["OMNIAUTH_PROVIDER_SECRET"] %>
+  google_secret_key: <%= ENV["GOOGLE_SECRET_KEY"] %>
+  org_id: <%= ENV["ORG_ID"] %>
+  org_name: <%= ENV["ORG_NAME"] %>
   # domain_name: <%= ENV["DOMAIN_NAME"] %>
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
